# momo_project

./: .gitignore  AGENTS.md  CLAUDE.md  EXPECTED_METRICS.md  HANDOFF.md  PLAN.md  README.md  download_all.py  download_extra.py  fetch_hf_cache.sh  pyproject.toml  requirements.txt  results228.csv  run_all.sh
artifacts/: README.md
artifacts/plots/: README.md
artifacts/runs/: README.md
artifacts/tables/: README.md
data/: README.md
data/distilled/: README.md
notebooks/: 00_check_setup.ipynb  01_full_data_baseline.ipynb  02_random_coreset_baseline.ipynb  03_stratified_random_baseline.ipynb  04_kcenter_tfidf_baseline.ipynb  05_kcenter_embedding_baseline.ipynb  06_paper_datasets_baseline_grid.ipynb  README.md  baselines.ipynb  dilm_ag_news.ipynb  dilm_ag_news.py  dilm_wrapper.py  embedding_distillation.ipynb  embedding_scaling_laws_6h.ipynb  scaling_laws.ipynb  scaling_laws.py  scaling_laws_missing_agnews_sst2.ipynb  scaling_laws_run.py  transferability.py
scaling_laws_coreset_report/: README.md  scaling_laws_all_methods.csv
scaling_laws_herding_report/: README.md  raw_results.csv  summary_mean_std.csv
src/: README.md  data.py  dataset_attrs.py  evaluator.py  generator.py  learner.py
tests/: README.md  test_collect_runs.py  test_data.py  test_dataloaders.py  test_dilm_loader.py  test_dilm_official.py  test_distillation.py  test_metrics.py  test_model_registry.py  test_pooling.py  test_save_baseline_run.py  test_saving.py  test_selection_registry.py  test_timing.py  test_training.py  test_training_pipeline_smoke.py  test_transforms.py  test_utils.py
(+166 files in other folders)
