[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-distillation"
version = "0.1.0"
description = "Notebook-first baselines for text dataset distillation research."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: slower tests that may download models/datasets and run tiny training loops",
]
